NLPINFERENCES (1)/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> spec
Rule 1     spec -> sentence0 spec
Rule 2     spec -> sentence0
Rule 3     sentence0 -> EQUALS
Rule 4     sentence0 -> sentence DOT
Rule 5     sentence -> NP VP
Rule 6     sentence -> sentence OR sentence
Rule 7     NP -> ID
Rule 8     NP -> DET CN
Rule 9     NP -> DET RCN
Rule 10    NP -> DET roleCNof
Rule 11    DET -> SOME
Rule 12    DET -> A
Rule 13    DET -> THE
Rule 14    DET -> EVERY
Rule 15    DET -> NO
Rule 16    NP -> ID SINGLEQUOTE S roleID
Rule 17    VP -> VP AND VP
Rule 18    VP -> ivID
Rule 19    VP -> IS NP
Rule 20    VP -> IS NOT NP
Rule 21    VP -> IS adjID
Rule 22    VP -> IS NOT adjID
Rule 23    VP -> TV NP
Rule 24    TV -> tvID
Rule 25    RCN -> CN THAT VP
Rule 26    RCN -> CN THAT NP TV
Rule 27    roleCNof -> roleID OF NP
Rule 28    CN -> ID
Rule 29    CN -> adjID CN

Terminals, with rules where they appear

A                    : 12
AND                  : 17
DOT                  : 4
EQUALS               : 3
EVERY                : 14
ID                   : 7 16 28
IS                   : 19 20 21 22
NO                   : 15
NOT                  : 20 22
OF                   : 27
OR                   : 6
S                    : 16
SINGLEQUOTE          : 16
SOME                 : 11
THAT                 : 25 26
THE                  : 13
adjID                : 21 22 29
error                : 
ivID                 : 18
roleID               : 16 27
tvID                 : 24

Nonterminals, with rules where they appear

CN                   : 8 25 26 29
DET                  : 8 9 10
NP                   : 5 19 20 23 26 27
RCN                  : 9
TV                   : 23 26
VP                   : 5 17 17 25
roleCNof             : 10
sentence             : 4 6 6
sentence0            : 1 2
spec                 : 1 0

Parsing method: LALR

state 0

    (0) S' -> . spec
    (1) spec -> . sentence0 spec
    (2) spec -> . sentence0
    (3) sentence0 -> . EQUALS
    (4) sentence0 -> . sentence DOT
    (5) sentence -> . NP VP
    (6) sentence -> . sentence OR sentence
    (7) NP -> . ID
    (8) NP -> . DET CN
    (9) NP -> . DET RCN
    (10) NP -> . DET roleCNof
    (16) NP -> . ID SINGLEQUOTE S roleID
    (11) DET -> . SOME
    (12) DET -> . A
    (13) DET -> . THE
    (14) DET -> . EVERY
    (15) DET -> . NO

    EQUALS          shift and go to state 3
    ID              shift and go to state 6
    SOME            shift and go to state 8
    A               shift and go to state 9
    THE             shift and go to state 10
    EVERY           shift and go to state 11
    NO              shift and go to state 12

    spec                           shift and go to state 1
    sentence0                      shift and go to state 2
    sentence                       shift and go to state 4
    NP                             shift and go to state 5
    DET                            shift and go to state 7

state 1

    (0) S' -> spec .



state 2

    (1) spec -> sentence0 . spec
    (2) spec -> sentence0 .
    (1) spec -> . sentence0 spec
    (2) spec -> . sentence0
    (3) sentence0 -> . EQUALS
    (4) sentence0 -> . sentence DOT
    (5) sentence -> . NP VP
    (6) sentence -> . sentence OR sentence
    (7) NP -> . ID
    (8) NP -> . DET CN
    (9) NP -> . DET RCN
    (10) NP -> . DET roleCNof
    (16) NP -> . ID SINGLEQUOTE S roleID
    (11) DET -> . SOME
    (12) DET -> . A
    (13) DET -> . THE
    (14) DET -> . EVERY
    (15) DET -> . NO

    $end            reduce using rule 2 (spec -> sentence0 .)
    EQUALS          shift and go to state 3
    ID              shift and go to state 6
    SOME            shift and go to state 8
    A               shift and go to state 9
    THE             shift and go to state 10
    EVERY           shift and go to state 11
    NO              shift and go to state 12

    sentence0                      shift and go to state 2
    spec                           shift and go to state 13
    sentence                       shift and go to state 4
    NP                             shift and go to state 5
    DET                            shift and go to state 7

state 3

    (3) sentence0 -> EQUALS .

    EQUALS          reduce using rule 3 (sentence0 -> EQUALS .)
    ID              reduce using rule 3 (sentence0 -> EQUALS .)
    SOME            reduce using rule 3 (sentence0 -> EQUALS .)
    A               reduce using rule 3 (sentence0 -> EQUALS .)
    THE             reduce using rule 3 (sentence0 -> EQUALS .)
    EVERY           reduce using rule 3 (sentence0 -> EQUALS .)
    NO              reduce using rule 3 (sentence0 -> EQUALS .)
    $end            reduce using rule 3 (sentence0 -> EQUALS .)


state 4

    (4) sentence0 -> sentence . DOT
    (6) sentence -> sentence . OR sentence

    DOT             shift and go to state 14
    OR              shift and go to state 15


state 5

    (5) sentence -> NP . VP
    (17) VP -> . VP AND VP
    (18) VP -> . ivID
    (19) VP -> . IS NP
    (20) VP -> . IS NOT NP
    (21) VP -> . IS adjID
    (22) VP -> . IS NOT adjID
    (23) VP -> . TV NP
    (24) TV -> . tvID

    ivID            shift and go to state 17
    IS              shift and go to state 18
    tvID            shift and go to state 20

    VP                             shift and go to state 16
    TV                             shift and go to state 19

state 6

    (7) NP -> ID .
    (16) NP -> ID . SINGLEQUOTE S roleID

    ivID            reduce using rule 7 (NP -> ID .)
    IS              reduce using rule 7 (NP -> ID .)
    tvID            reduce using rule 7 (NP -> ID .)
    AND             reduce using rule 7 (NP -> ID .)
    DOT             reduce using rule 7 (NP -> ID .)
    OR              reduce using rule 7 (NP -> ID .)
    SINGLEQUOTE     shift and go to state 21


state 7

    (8) NP -> DET . CN
    (9) NP -> DET . RCN
    (10) NP -> DET . roleCNof
    (28) CN -> . ID
    (29) CN -> . adjID CN
    (25) RCN -> . CN THAT VP
    (26) RCN -> . CN THAT NP TV
    (27) roleCNof -> . roleID OF NP

    ID              shift and go to state 25
    adjID           shift and go to state 26
    roleID          shift and go to state 27

    CN                             shift and go to state 22
    RCN                            shift and go to state 23
    roleCNof                       shift and go to state 24

state 8

    (11) DET -> SOME .

    ID              reduce using rule 11 (DET -> SOME .)
    adjID           reduce using rule 11 (DET -> SOME .)
    roleID          reduce using rule 11 (DET -> SOME .)


state 9

    (12) DET -> A .

    ID              reduce using rule 12 (DET -> A .)
    adjID           reduce using rule 12 (DET -> A .)
    roleID          reduce using rule 12 (DET -> A .)


state 10

    (13) DET -> THE .

    ID              reduce using rule 13 (DET -> THE .)
    adjID           reduce using rule 13 (DET -> THE .)
    roleID          reduce using rule 13 (DET -> THE .)


state 11

    (14) DET -> EVERY .

    ID              reduce using rule 14 (DET -> EVERY .)
    adjID           reduce using rule 14 (DET -> EVERY .)
    roleID          reduce using rule 14 (DET -> EVERY .)


state 12

    (15) DET -> NO .

    ID              reduce using rule 15 (DET -> NO .)
    adjID           reduce using rule 15 (DET -> NO .)
    roleID          reduce using rule 15 (DET -> NO .)


state 13

    (1) spec -> sentence0 spec .

    $end            reduce using rule 1 (spec -> sentence0 spec .)


state 14

    (4) sentence0 -> sentence DOT .

    EQUALS          reduce using rule 4 (sentence0 -> sentence DOT .)
    ID              reduce using rule 4 (sentence0 -> sentence DOT .)
    SOME            reduce using rule 4 (sentence0 -> sentence DOT .)
    A               reduce using rule 4 (sentence0 -> sentence DOT .)
    THE             reduce using rule 4 (sentence0 -> sentence DOT .)
    EVERY           reduce using rule 4 (sentence0 -> sentence DOT .)
    NO              reduce using rule 4 (sentence0 -> sentence DOT .)
    $end            reduce using rule 4 (sentence0 -> sentence DOT .)


state 15

    (6) sentence -> sentence OR . sentence
    (5) sentence -> . NP VP
    (6) sentence -> . sentence OR sentence
    (7) NP -> . ID
    (8) NP -> . DET CN
    (9) NP -> . DET RCN
    (10) NP -> . DET roleCNof
    (16) NP -> . ID SINGLEQUOTE S roleID
    (11) DET -> . SOME
    (12) DET -> . A
    (13) DET -> . THE
    (14) DET -> . EVERY
    (15) DET -> . NO

    ID              shift and go to state 6
    SOME            shift and go to state 8
    A               shift and go to state 9
    THE             shift and go to state 10
    EVERY           shift and go to state 11
    NO              shift and go to state 12

    sentence                       shift and go to state 28
    NP                             shift and go to state 5
    DET                            shift and go to state 7

state 16

    (5) sentence -> NP VP .
    (17) VP -> VP . AND VP

    DOT             reduce using rule 5 (sentence -> NP VP .)
    OR              reduce using rule 5 (sentence -> NP VP .)
    AND             shift and go to state 29


state 17

    (18) VP -> ivID .

    AND             reduce using rule 18 (VP -> ivID .)
    DOT             reduce using rule 18 (VP -> ivID .)
    OR              reduce using rule 18 (VP -> ivID .)
    ivID            reduce using rule 18 (VP -> ivID .)
    IS              reduce using rule 18 (VP -> ivID .)
    tvID            reduce using rule 18 (VP -> ivID .)


state 18

    (19) VP -> IS . NP
    (20) VP -> IS . NOT NP
    (21) VP -> IS . adjID
    (22) VP -> IS . NOT adjID
    (7) NP -> . ID
    (8) NP -> . DET CN
    (9) NP -> . DET RCN
    (10) NP -> . DET roleCNof
    (16) NP -> . ID SINGLEQUOTE S roleID
    (11) DET -> . SOME
    (12) DET -> . A
    (13) DET -> . THE
    (14) DET -> . EVERY
    (15) DET -> . NO

    NOT             shift and go to state 31
    adjID           shift and go to state 32
    ID              shift and go to state 6
    SOME            shift and go to state 8
    A               shift and go to state 9
    THE             shift and go to state 10
    EVERY           shift and go to state 11
    NO              shift and go to state 12

    NP                             shift and go to state 30
    DET                            shift and go to state 7

state 19

    (23) VP -> TV . NP
    (7) NP -> . ID
    (8) NP -> . DET CN
    (9) NP -> . DET RCN
    (10) NP -> . DET roleCNof
    (16) NP -> . ID SINGLEQUOTE S roleID
    (11) DET -> . SOME
    (12) DET -> . A
    (13) DET -> . THE
    (14) DET -> . EVERY
    (15) DET -> . NO

    ID              shift and go to state 6
    SOME            shift and go to state 8
    A               shift and go to state 9
    THE             shift and go to state 10
    EVERY           shift and go to state 11
    NO              shift and go to state 12

    NP                             shift and go to state 33
    DET                            shift and go to state 7

state 20

    (24) TV -> tvID .

    ID              reduce using rule 24 (TV -> tvID .)
    SOME            reduce using rule 24 (TV -> tvID .)
    A               reduce using rule 24 (TV -> tvID .)
    THE             reduce using rule 24 (TV -> tvID .)
    EVERY           reduce using rule 24 (TV -> tvID .)
    NO              reduce using rule 24 (TV -> tvID .)
    AND             reduce using rule 24 (TV -> tvID .)
    DOT             reduce using rule 24 (TV -> tvID .)
    OR              reduce using rule 24 (TV -> tvID .)
    ivID            reduce using rule 24 (TV -> tvID .)
    IS              reduce using rule 24 (TV -> tvID .)
    tvID            reduce using rule 24 (TV -> tvID .)


state 21

    (16) NP -> ID SINGLEQUOTE . S roleID

    S               shift and go to state 34


state 22

    (8) NP -> DET CN .
    (25) RCN -> CN . THAT VP
    (26) RCN -> CN . THAT NP TV

    ivID            reduce using rule 8 (NP -> DET CN .)
    IS              reduce using rule 8 (NP -> DET CN .)
    tvID            reduce using rule 8 (NP -> DET CN .)
    AND             reduce using rule 8 (NP -> DET CN .)
    DOT             reduce using rule 8 (NP -> DET CN .)
    OR              reduce using rule 8 (NP -> DET CN .)
    THAT            shift and go to state 35


state 23

    (9) NP -> DET RCN .

    ivID            reduce using rule 9 (NP -> DET RCN .)
    IS              reduce using rule 9 (NP -> DET RCN .)
    tvID            reduce using rule 9 (NP -> DET RCN .)
    AND             reduce using rule 9 (NP -> DET RCN .)
    DOT             reduce using rule 9 (NP -> DET RCN .)
    OR              reduce using rule 9 (NP -> DET RCN .)


state 24

    (10) NP -> DET roleCNof .

    ivID            reduce using rule 10 (NP -> DET roleCNof .)
    IS              reduce using rule 10 (NP -> DET roleCNof .)
    tvID            reduce using rule 10 (NP -> DET roleCNof .)
    AND             reduce using rule 10 (NP -> DET roleCNof .)
    DOT             reduce using rule 10 (NP -> DET roleCNof .)
    OR              reduce using rule 10 (NP -> DET roleCNof .)


state 25

    (28) CN -> ID .

    THAT            reduce using rule 28 (CN -> ID .)
    ivID            reduce using rule 28 (CN -> ID .)
    IS              reduce using rule 28 (CN -> ID .)
    tvID            reduce using rule 28 (CN -> ID .)
    AND             reduce using rule 28 (CN -> ID .)
    DOT             reduce using rule 28 (CN -> ID .)
    OR              reduce using rule 28 (CN -> ID .)


state 26

    (29) CN -> adjID . CN
    (28) CN -> . ID
    (29) CN -> . adjID CN

    ID              shift and go to state 25
    adjID           shift and go to state 26

    CN                             shift and go to state 36

state 27

    (27) roleCNof -> roleID . OF NP

    OF              shift and go to state 37


state 28

    (6) sentence -> sentence OR sentence .
    (6) sentence -> sentence . OR sentence

  ! shift/reduce conflict for OR resolved as shift
    DOT             reduce using rule 6 (sentence -> sentence OR sentence .)
    OR              shift and go to state 15

  ! OR              [ reduce using rule 6 (sentence -> sentence OR sentence .) ]


state 29

    (17) VP -> VP AND . VP
    (17) VP -> . VP AND VP
    (18) VP -> . ivID
    (19) VP -> . IS NP
    (20) VP -> . IS NOT NP
    (21) VP -> . IS adjID
    (22) VP -> . IS NOT adjID
    (23) VP -> . TV NP
    (24) TV -> . tvID

    ivID            shift and go to state 17
    IS              shift and go to state 18
    tvID            shift and go to state 20

    VP                             shift and go to state 38
    TV                             shift and go to state 19

state 30

    (19) VP -> IS NP .

    AND             reduce using rule 19 (VP -> IS NP .)
    DOT             reduce using rule 19 (VP -> IS NP .)
    OR              reduce using rule 19 (VP -> IS NP .)
    ivID            reduce using rule 19 (VP -> IS NP .)
    IS              reduce using rule 19 (VP -> IS NP .)
    tvID            reduce using rule 19 (VP -> IS NP .)


state 31

    (20) VP -> IS NOT . NP
    (22) VP -> IS NOT . adjID
    (7) NP -> . ID
    (8) NP -> . DET CN
    (9) NP -> . DET RCN
    (10) NP -> . DET roleCNof
    (16) NP -> . ID SINGLEQUOTE S roleID
    (11) DET -> . SOME
    (12) DET -> . A
    (13) DET -> . THE
    (14) DET -> . EVERY
    (15) DET -> . NO

    adjID           shift and go to state 40
    ID              shift and go to state 6
    SOME            shift and go to state 8
    A               shift and go to state 9
    THE             shift and go to state 10
    EVERY           shift and go to state 11
    NO              shift and go to state 12

    NP                             shift and go to state 39
    DET                            shift and go to state 7

state 32

    (21) VP -> IS adjID .

    AND             reduce using rule 21 (VP -> IS adjID .)
    DOT             reduce using rule 21 (VP -> IS adjID .)
    OR              reduce using rule 21 (VP -> IS adjID .)
    ivID            reduce using rule 21 (VP -> IS adjID .)
    IS              reduce using rule 21 (VP -> IS adjID .)
    tvID            reduce using rule 21 (VP -> IS adjID .)


state 33

    (23) VP -> TV NP .

    AND             reduce using rule 23 (VP -> TV NP .)
    DOT             reduce using rule 23 (VP -> TV NP .)
    OR              reduce using rule 23 (VP -> TV NP .)
    ivID            reduce using rule 23 (VP -> TV NP .)
    IS              reduce using rule 23 (VP -> TV NP .)
    tvID            reduce using rule 23 (VP -> TV NP .)


state 34

    (16) NP -> ID SINGLEQUOTE S . roleID

    roleID          shift and go to state 41


state 35

    (25) RCN -> CN THAT . VP
    (26) RCN -> CN THAT . NP TV
    (17) VP -> . VP AND VP
    (18) VP -> . ivID
    (19) VP -> . IS NP
    (20) VP -> . IS NOT NP
    (21) VP -> . IS adjID
    (22) VP -> . IS NOT adjID
    (23) VP -> . TV NP
    (7) NP -> . ID
    (8) NP -> . DET CN
    (9) NP -> . DET RCN
    (10) NP -> . DET roleCNof
    (16) NP -> . ID SINGLEQUOTE S roleID
    (24) TV -> . tvID
    (11) DET -> . SOME
    (12) DET -> . A
    (13) DET -> . THE
    (14) DET -> . EVERY
    (15) DET -> . NO

    ivID            shift and go to state 17
    IS              shift and go to state 18
    ID              shift and go to state 6
    tvID            shift and go to state 20
    SOME            shift and go to state 8
    A               shift and go to state 9
    THE             shift and go to state 10
    EVERY           shift and go to state 11
    NO              shift and go to state 12

    VP                             shift and go to state 42
    NP                             shift and go to state 43
    TV                             shift and go to state 19
    DET                            shift and go to state 7

state 36

    (29) CN -> adjID CN .
